Beta signup home page added to home. Image slider alignment fix needed

--- a/src/assets/scss/components/imageSlider.scss
+++ b/src/assets/scss/components/imageSlider.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   gap: 2em;
   flex-wrap: wrap;
   align-items: center;
